[tool.poetry]
name = "slam"
version = "0.1.0"
description = ""
authors = ["gepopa10 <gpopmescu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
