[tool.poetry]
name = "slam"
version = "0.1.0"
description = ""
authors = ["gepopa10 <gpopmescu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pygame = "^2.5.1"
python-math = "^0.0.1"
numpy = "^1.25.2"
scipy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
